--- a/circle.yml
+++ b/circle.yml
@@ -8,5 +8,5 @@ deployment:
   production:
     branch: master
     commands:
-      - git remote add dokku@reboo.org:miciudadmx-org
+      - git remote add dokku dokku@reboo.org:miciudadmx-org
       - git push dokku master
