--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
   "require" : {
-    "php": "~7"
-  }
+      "php": "~7"
+    }
+    "scripts": {
+      "test": [
+          "echo 'sucesso'"
+      ]
+    }
 }
