--- a/circle.yml
+++ b/circle.yml
@@ -10,5 +10,5 @@ deployment:
   production:
     branch: master
     commands:
-      - git remote add dokku dokku@reboo.org:miciudadmx-org
+      - git remote add dokku dokku@miciudadmx.org:website-miciudadmx
       - git push dokku master
